Abstracted out the equation help image and popup to a widget, added to widget to all the different equation boxes.  I also added some colorings to the popup box, as well as fixed a bug so that the colors would display correctly on firefox 3.x.

--- a/web/war/Begin_Website.css
+++ b/web/war/Begin_Website.css
@@ -32,6 +32,11 @@ h1 {
 	color: #EEEEEE !important;
 }
 
+.gwt-TabLayoutPanel .gwt-TabLayoutPanelContentContainer
+{
+	border-color: #92231B !important;	
+}
+
 .gwt-TabLayoutPanel .gwt-TabLayoutPanelContent
 {
 	border-color: #92231B !important;
@@ -47,4 +52,15 @@ div#calculationArea
 	margin-left:auto;
 	margin-right:auto;
 	width: 450px;
+}
+
+.equationArea td
+{	
+	padding: 2px;
+	vertical-align: middle !important;
+}
+
+.gwt-PopupPanel
+{
+	border-color: #92231B !important;	
 }
